// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot, menuOpen false 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM cgpxYD"
  >
    <div
      data-testid="div1"
    />
    <div
      data-testid="div2"
    />
    <div
      data-testid="div3"
    />
  </button>
</DocumentFragment>
`;

exports[`matches snapshot, menuOpen true 1`] = `
<DocumentFragment>
  <button
    class="sc-bdnxRM hdArge"
    open=""
  >
    <div
      data-testid="div1"
    />
    <div
      data-testid="div2"
    />
    <div
      data-testid="div3"
    />
  </button>
</DocumentFragment>
`;
